View Issue Details Jump to Notes ] Print ]
IDProjectCategoryView StatusDate SubmittedLast Update
0011275CMakeCPackpublic2010-09-29 11:402016-06-10 14:31
Reporterpouillot 
Assigned ToKitware Robot 
PrioritynormalSeveritymajorReproducibilityalways
StatusclosedResolutionmoved 
PlatformOSOS Version
Product VersionCMake-2-8 
Target VersionFixed in Version 
Summary0011275: Can't customize MUI welcome page title
Description* The title contents can't be customized : it could if MUI_WELCOMEPAGE_TITLE was used in the generated .nsi
  => a new CPACK_NSIS_MUI_WELCOMEPAGE_TITLE variable ?

* Neither the number of lines allocated in the page header for the title, making the displayed title often clipped, especially in some translations where words are long (like in french ;-) . See attached screenshot.
  => a new CPACK_NSIS_MUI_WELCOMEPAGE_TITLE_3LINES variable ?
TagsNo tags attached.
Attached Filespng file icon NSISInstallerTitleClipped.png [^] (18,756 bytes) 2010-09-29 11:40

 Relationships

  Notes
(0041748)
Kitware Robot (administrator)
2016-06-10 14:28

Resolving issue as `moved`.

This issue tracker is no longer used. Further discussion of this issue may take place in the current CMake Issues page linked in the banner at the top of this page.

 Issue History
Date Modified Username Field Change
2010-09-29 11:40 pouillot New Issue
2010-09-29 11:40 pouillot File Added: NSISInstallerTitleClipped.png
2010-12-15 11:32 David Cole Status new => assigned
2010-12-15 11:32 David Cole Assigned To => David Cole
2011-10-25 22:25 David Cole Status assigned => backlog
2011-10-25 22:26 David Cole Assigned To David Cole =>
2016-06-10 14:28 Kitware Robot Note Added: 0041748
2016-06-10 14:28 Kitware Robot Status backlog => resolved
2016-06-10 14:28 Kitware Robot Resolution open => moved
2016-06-10 14:28 Kitware Robot Assigned To => Kitware Robot
2016-06-10 14:31 Kitware Robot Status resolved => closed


Copyright © 2000 - 2018 MantisBT Team