CPack/NSIS: Add options for custom welcome/finish titles + display on 3 lines

Fixes: #11275